[update] Change default branch from 'main' to 'master' in build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build Docker image and Create Release
 on:
     push:
         branches:
-            - main
+            - master
 
 jobs:
     get-version:
